samples/_failures_safe/1761356306_63ec11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f83f3221.c: In function ‘main’:
./samples/SAFE/__tmp_f83f3221.c:138:5: error: expected declaration or statement at end of input
  138 |     printf("4: Determinant\n");
      |     ^~~~~~
